# laravel/routes/api.php
@@ -10,6 +10,7 @@ Route::group(['middleware' => 'auth:api'], function () {
 });
 Route::get('type', 'TypeController@getIndex');
 Route::get('cookie_test', 'TypeController@testCookie');
+Route::get('job_test', 'TypeController@testJob');
 Route::get('event', 'TypeController@getEvent');
 Route::resources([
     'books' => 'BookController',
